--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -3,19 +3,163 @@
 @tailwind utilities;
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --tnh-background-100: 0, 9%, 100%;
+  --tnh-background-200: 0, 9%, 98%;
+  --tnh-primary: 18, 83%, 55%;
+  --tnh-secondary: 238, 85%, 13%;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+    --tnh-background-100: 0, 9%, 100%;
+    --tnh-background-200: 0, 9%, 98%;
+    /* --tnh-background-100: 0,0%,4%;
+      --tnh-background-200: 0,0%,0%; */
+    --tnh-primary: 18, 83%, 55%;
+    --tnh-secondary: 238, 85%, 13%;
+    --tnh-gray-100: 0, 0%, 10%;
+    --tnh-gray-200: 0, 0%, 12%;
+    --tnh-gray-300: 0, 0%, 16%;
+    --tnh-gray-400: 0, 0%, 18%;
+    --tnh-gray-500: 0, 0%, 27%;
+    --tnh-gray-600: 0, 0%, 53%;
+    --tnh-gray-700: 0, 0%, 56%;
+    --tnh-gray-800: 0, 0%, 49%;
+    --tnh-gray-900: 0, 0%, 63%;
+    --tnh-gray-1000: 0, 0%, 93%;
+    --tnh-blue-100: 216, 50%, 12%;
+    --tnh-blue-200: 214, 59%, 15%;
+    --tnh-blue-300: 213, 71%, 20%;
+    --tnh-blue-400: 212, 78%, 23%;
+    --tnh-blue-500: 211, 86%, 27%;
+    --tnh-blue-600: 206, 100%, 50%;
+    --tnh-blue-700: 212, 100%, 48%;
+    --tnh-blue-800: 212, 100%, 41%;
+    --tnh-blue-900: 210, 100%, 66%;
+    --tnh-blue-1000: 206, 100%, 96%;
+    --tnh-red-100: 357, 37%, 12%;
+    --tnh-red-200: 357, 46%, 16%;
+    --tnh-red-300: 356, 54%, 22%;
+    --tnh-red-400: 357, 55%, 26%;
+    --tnh-red-500: 357, 60%, 32%;
+    --tnh-red-600: 358, 75%, 59%;
+    --tnh-red-700: 358, 75%, 59%;
+    --tnh-red-800: 358, 69%, 52%;
+    --tnh-red-900: 358, 100%, 69%;
+    --tnh-red-1000: 353, 90%, 96%;
+    --tnh-amber-100: 35, 100%, 8%;
+    --tnh-amber-200: 32, 100%, 10%;
+    --tnh-amber-300: 33, 100%, 15%;
+    --tnh-amber-400: 35, 100%, 17%;
+    --tnh-amber-500: 35, 91%, 22%;
+    --tnh-amber-600: 39, 85%, 49%;
+    --tnh-amber-700: 39, 100%, 57%;
+    --tnh-amber-800: 35, 100%, 52%;
+    --tnh-amber-900: 39, 90%, 50%;
+    --tnh-amber-1000: 40, 94%, 93%;
+    --tnh-green-100: 136, 50%, 9%;
+    --tnh-green-200: 137, 50%, 12%;
+    --tnh-green-300: 136, 50%, 14%;
+    --tnh-green-400: 135, 70%, 16%;
+    --tnh-green-500: 135, 70%, 23%;
+    --tnh-green-600: 135, 70%, 34%;
+    --tnh-green-700: 131, 41%, 46%;
+    --tnh-green-800: 132, 43%, 39%;
+    --tnh-green-900: 131, 43%, 57%;
+    --tnh-green-1000: 136, 73%, 94%;
+    --tnh-teal-100: 169, 78%, 7%;
+    --tnh-teal-200: 170, 74%, 9%;
+    --tnh-teal-300: 171, 75%, 13%;
+    --tnh-teal-400: 171, 85%, 13%;
+    --tnh-teal-500: 172, 85%, 20%;
+    --tnh-teal-600: 172, 85%, 32%;
+    --tnh-teal-700: 173, 80%, 36%;
+    --tnh-teal-800: 173, 83%, 30%;
+    --tnh-teal-900: 174, 90%, 41%;
+    --tnh-teal-1000: 166, 71%, 93%;
+    --tnh-purple-100: 283, 30%, 12%;
+    --tnh-purple-200: 281, 38%, 16%;
+    --tnh-purple-300: 279, 44%, 23%;
+    --tnh-purple-400: 277, 46%, 28%;
+    --tnh-purple-500: 274, 49%, 35%;
+    --tnh-purple-600: 272, 51%, 54%;
+    --tnh-purple-700: 272, 51%, 54%;
+    --tnh-purple-800: 272, 47%, 45%;
+    --tnh-purple-900: 275, 80%, 71%;
+    --tnh-purple-1000: 281, 73%, 96%;
+    --tnh-pink-100: 335, 32%, 12%;
+    --tnh-pink-200: 335, 43%, 16%;
+    --tnh-pink-300: 335, 47%, 21%;
+    --tnh-pink-400: 335, 51%, 22%;
+    --tnh-pink-500: 335, 57%, 27%;
+    --tnh-pink-600: 336, 75%, 40%;
+    --tnh-pink-700: 336, 80%, 58%;
+    --tnh-pink-800: 336, 74%, 51%;
+    --tnh-pink-900: 341, 90%, 67%;
+    --tnh-pink-1000: 333, 90%, 96%;
+    --tnh-gray-alpha-100: #ffffff0f;
+    --tnh-gray-alpha-200: #ffffff17;
+    --tnh-gray-alpha-300: #ffffff21;
+    --tnh-gray-alpha-400: #ffffff24;
+    --tnh-gray-alpha-500: #ffffff3d;
+    --tnh-gray-alpha-600: #ffffff82;
+    --tnh-gray-alpha-700: #ffffff8a;
+    --tnh-gray-alpha-800: #ffffff78;
+    --tnh-gray-alpha-900: #ffffff9c;
+    --tnh-gray-alpha-1000: #ffffffeb;
+    --tnh-focus-border: 0 0 0 1px var(--tnh-gray-alpha-600),
+      0px 0px 0px 4px #ffffff3d;
+    --tnh-focus-color: var(--tnh-blue-900);
+    --tnh-shadow-border-inset: inset 0 0 0 1px #ffffff1a;
   }
 }
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+.-tnp-header {
+  @apply fixed top-0 left-0 right-0 z-[1000] transition duration-200 ease-in-out;
+}
+
+.-tnh-shadow {
+  @apply shadow-[0_10px_40px_0_rgba(0,0,0,0.05)]
+}
+
+.-tnh-hero__title {
+	font-weight: 600;
+	font-size: 60px;
+	line-height: 1.2;
+	background: linear-gradient(97deg, #ee8c61 27.01%, #4c43c4 87.3%);
+	background-clip: text;
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent
+}
+
+@media (max-width:767px) {
+	.-tnh-hero__title {
+		font-size: 50px
+	}
+}
+
+@media (max-width:575px) {
+	.-tnh-hero__title {
+		font-size: 36px
+	}
+}
+
+.flex-x-y-y {
+  @apply flex justify-between items-center
+
+}
+.flex-x-y {
+  @apply flex justify-center items-center
+}
+
+.flex-x {
+  @apply flex items-center
+}
+
+.flex-y {
+  @apply flex justify-center
+}
+
+.divContainer {
+  @apply container mx-auto px-4
 }
