--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -119,47 +119,79 @@
 }
 
 .-tnh-shadow {
-  @apply shadow-[0_10px_40px_0_rgba(0,0,0,0.05)]
+  @apply shadow-[0_10px_40px_0_rgba(0,0,0,0.05)];
 }
 
 .-tnh-hero__title {
-	font-weight: 600;
-	font-size: 60px;
-	line-height: 1.2;
-	background: linear-gradient(97deg, #ee8c61 27.01%, #4c43c4 87.3%);
-	background-clip: text;
-	-webkit-background-clip: text;
-	-webkit-text-fill-color: transparent
+  font-weight: 600;
+  font-size: 60px;
+  line-height: 1.2;
+  background: linear-gradient(97deg, #ee8c61 27.01%, #4c43c4 87.3%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
-@media (max-width:767px) {
-	.-tnh-hero__title {
-		font-size: 50px
-	}
+@media (max-width: 767px) {
+  .-tnh-hero__title {
+    font-size: 50px;
+  }
 }
 
-@media (max-width:575px) {
-	.-tnh-hero__title {
-		font-size: 36px
-	}
+@media (max-width: 575px) {
+  .-tnh-hero__title {
+    font-size: 36px;
+  }
 }
 
 .flex-x-y-y {
-  @apply flex justify-between items-center
-
+  @apply flex justify-between items-center;
 }
 .flex-x-y {
-  @apply flex justify-center items-center
+  @apply flex justify-center items-center;
 }
 
 .flex-x {
-  @apply flex items-center
+  @apply flex items-center;
 }
 
 .flex-y {
-  @apply flex justify-center
+  @apply flex justify-center;
 }
 
-.divContainer {
-  @apply container mx-auto px-4
+section > div:first-child {
+  @apply !container !mx-auto !px-5;
 }
+
+.-tnp-feature::after {
+  content: "";
+  @apply absolute top-0 bottom-0 left-0 right-0 z-[1] opacity-50;
+  background: linear-gradient(180deg, rgba(5, 7, 60, 0), #05073c);
+}
+
+.-tnp-feature img:hover {
+  @apply transition duration-700 hover:scale-[1.15];
+}
+
+.-tnp-special::after {
+  content: "";
+  @apply absolute top-0 bottom-0 left-0 right-0 z-[1] opacity-30;
+  background: linear-gradient(270deg, rgba(5, 7, 60, 0), #05073c);
+}
+
+.-tnh-card-bg {
+  background-size: 100% 1px;
+      background-repeat: no-repeat;
+    background-image: linear-gradient(90deg, #000 0, #000);
+    background-position: 0 95%;
+    background-size: 0 1px;
+    transition: background-size .25s cubic-bezier(.785,.135,.15,.86) 0s;
+    padding: .1% 0;
+}
+/* .-tnh-card-bg {
+  background-size: 100% 1px;
+  @apply bg-no-repeat bg-custom-gradient;
+  background-position: 0 95%;
+  background-size: 0 1px;
+  transition: background-size 0.25s cubic-bezier(0.785, 0.135, 0.15, 0.86);
+} */
